src/app.css
@import "mirotone/dist/styles.css";
@import "@chatscope/chat-ui-kit-styles/dist/default/styles.min.css";

:root {
  --dark-color: #091e05;
  --light-color: #ffffff;
  --background: #fcf5c7;
  --miro-grey: #f2f2f2;
  --primary-color: #009688;
  --secondary-color: #dff2d8;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

/* --------------- Chat container --------------- */

body {
  display: flex;
}

#root {
  width: 100%;
  overflow: auto;
  padding: 0 var(--space-small) var(--space-small) var(--space-small);
  height: 100vh;
}

.grid.wrapper {
  height: 93%;
  display: block;
}

.grid.wrapper > div {
  height: 100%;
}

.cs-message-list {
  max-height: 88vh;
  background-color: var(--miro-grey);
  padding-top: 9px;
}

.scrollbar-container {
  padding-right: 25px;
}

/* --------------- Basic chat elements --------------- */

.cs-message.cs-message--outgoing,
.cs-message.cs-message--outgoing.cs-message--single:not(:first-child),
.cs-message.cs-message--outgoing.cs-message--first {
  margin-top: 0.9em;
  margin-bottom: 1em;
  margin-right: -0.5em;
}

.cs-message.cs-message--incoming.cs-message--first {
  margin-bottom: 6px;
}

.cs-message__content,
.cs-button {
  color: var(--dark-color);
  font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
}

.cs-message.cs-message--outgoing .cs-message__content,
.cs-message.cs-message--outgoing.cs-message--first .cs-message__content {
  background: var(--light-color);
}

.cs-message.cs-message--incoming .cs-message__content,
.cs-message.cs-message--incoming.cs-message--first .cs-message__content {
  background: var(--primary-color);
  color: var(--light-color);
}

.cs-message .cs-button {
  color: var(--dark-color);
  border-radius: 0.7em;
  transition: 0.3s;
  padding: 6px 9px;
  cursor: pointer;
}

.cs-message .cs-button:hover {
  transition: 0.3s;
}

.cs-message .cs-button.cs-button--border {
  border: 1.1px solid var(--primary-color);
}

.cs-message-input__content-editor-wrapper,
.cs-message-input__content-editor,
.cs-message-input__content-editor[disabled],
.cs-message-input__content-editor-wrapper[disabled],
.cs-message-input--disabled .cs-message-input__content-editor-wrapper {
  background-color: var(--miro-grey);
}

.cs-button--send {
  color: var(--primary-color);
}

.ps__rail-y:hover > .ps__thumb-y,
.ps__rail-y:focus > .ps__thumb-y,
.ps__rail-y.ps--clicking .ps__thumb-y,
.ps__thumb-y {
  /* Scrollbar in the text input */
  background-color: var(--primary-color);
}

.cs-message-list .cs-message-separator:not(:first-child) {
  margin: 1.5em 0;
}

.cs-message-list .cs-typing-indicator {
  background-color: transparent;
}

.cs-typing-indicator__dot {
  background-color: var(--primary-color);
}

.cs-typing-indicator__text {
  color: var(--primary-color);
}

.cs-message--incoming .cs-message__avatar {
  margin: 0 4px 0 0;
}

.cs-message--incoming.cs-message--avatar-spacer {
  margin-left: 46px;
}

/* --------------- Advance chat elements --------------- */

.recommendation-template {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.recommendation-template > img {
  max-width: 100%;
  height: auto;
  scale: 1.13;
}

.recommendation-template > h3 {
  margin-top: 18px;
  margin-bottom: initial;
  font-size: medium;
  font-weight: bold;
}

.recommendation-template > p {
  font-size: small;
  margin-block-start: 0.3em;
  margin-block-end: 0.3em;
  line-height: inherit;
}

.recommendation-template .cs-button {
  background: var(--light-color);
  margin: 9px 0;
}

.recommendation-template .cs-button:hover {
  background: var(--miro-grey);
  opacity: 1;
}

/* --------------- Common to actions template --------------- */

.cs-message.cs-message--incoming .cs-message__content:has(.actions-template),
.cs-message.cs-message--incoming
  .cs-message__content:has(.external-link-template),
.cs-message.cs-message--incoming .cs-message__content:has(.reactions-template) {
  background: transparent;
  padding: 0;
}

/* --------------- Reactions --------------- */

.reactions-template {
  display: flex;
  justify-content: end;
}

.cs-message__content-wrapper:has(.reactions-template) {
  display: block;
  width: 100%;
}

.reactions-template span {
  cursor: pointer;
  background-color: transparent;
  padding: 6px 9px;
  border-radius: 0.7em;
  transition: 0.3s;
}

.reactions-template span:hover {
  background-color: var(--secondary-color);
  transition: 0.3s;
}

.reactions-template span.disabled,
.reactions-template span.disabled:hover {
  cursor: not-allowed;
  background-color: transparent;
}

.reactions-template svg {
  height: 18px;
  width: 18px;
}

/* --------------- Quick actions --------------- */

.actions-template .cs-button {
  background: var(--miro-grey);
  margin-bottom: 4px;
}

.actions-template .cs-button:hover {
  background: var(--light-color);
  opacity: 1;
}

/* --------------- External link --------------- */

.cs-message .external-link-template .cs-button.cs-button--border {
  background-color: var(--primary-color);
  color: var(--light-color);
  margin: 0;
}

.cs-message .external-link-template .cs-button.cs-button--border:hover {
  background-color: var(--dark-color);
  border: 1.1px solid var(--dark-color);
}

.external-link-template svg {
  display: inline;
  height: 14px;
  position: relative;
  top: 3px;
}

/* --------------- Message separator --------------- */

.cs-message-separator,
.cs-message-separator::before,
.cs-message-separator::after {
  background-color: var(--primary-color);
  height: 0.1px;
  opacity: 0.3;
}

/* --------------- Footer --------------- */

footer {
  padding: var(--space-small) 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

